# computational-geometry

./: .gitignore  CMakeLists.txt  Readme.md
include/: ConvexHull.hpp  Graham_scan.hpp  Point.hpp
include/algorithm/: PlaneSweep.hpp
include/data_structures/: avl.hpp  status.hpp
include/geometry/: Algorithms.h  ConvexHull.hpp  Geometry.h  Geometry.hpp  PlaneSweep.hpp  Polygon2D.hpp  Utilities.h  Utilities.hpp  Vertex2D.hpp
include/ui/: Button.hpp  GeometryGrid.hpp  Label.hpp  RenderObject.hpp  Renderer.hpp  button.h
src/: main.cpp
src/algorithm/: ConvexHull.cpp  PlaneSweep.cpp
src/geometry/: ConvexHull.cpp  Point2D.cpp  Polygon2D.cpp  Segment2D.cpp
src/ui/: Button.cpp  GeometryGrid.cpp  Label.cpp  Renderer.cpp
